Fix fav map spinner position on mobile device

--- a/app/assets/stylesheets/new_public_dashboard/fav-map.css.scss
+++ b/app/assets/stylesheets/new_public_dashboard/fav-map.css.scss
@@ -15,9 +15,6 @@ $height: 280px;
   height: $height / 2;
   background: white;
 }
-@media (min-width: $sMedia-tablet) {
-  .FavMap { height: $height; }
-}
 .FavMap:before {
   content: '';
   position: absolute;
@@ -34,7 +31,7 @@ $height: 280px;
 }
 .FavMap-spinner {
   position: absolute;
-  top: ($height / 2) - $sSpinner-size;
+  top: ($height / 4) - $sSpinner-size;
   left: 50%;
   margin-left: -#{$sSpinner-size / 2};
   display: none;
@@ -42,4 +39,11 @@ $height: 280px;
 .FavMap.is-pre-loading .FavMap-spinner,
 .FavMap.is-loading .FavMap-spinner {
   display: block;
+}
+
+@media (min-width: $sMedia-tablet) {
+  .FavMap { height: $height; }
+  .FavMap-spinner {
+    top: ($height / 2) - $sSpinner-size;
+  }
 }
